[package]
name = "msg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dotenv = "0.15.0"
git2 = "0.20.0"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build]
rustflags = ["-C", "target-cpu=native"]
